--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "meow",
+  "name": "couplesync",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npx ts-node app.ts",
+    "build": "tsc"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Hana & Mia",
+  "license": "MIT",
   "description": "",
   "dependencies": {
     "@types/node": "^22.2.0",
