--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.7.3",
     "colors": "^1.4.0",
     "dotenv": "^16.4.5",
+    "libsodium-wrappers": "^0.7.15",
     "readline": "^1.3.0",
     "typescript": "^5.5.4"
   }
