--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "preinstall": "npx only-allow pnpm",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx ts-node app.ts",
+    "start": "npx ts-node ./src/app.ts",
     "build": "tsc"
   },
   "keywords": [],
