--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -11,10 +11,9 @@ edition = "2021"
 tauri-build = { version = "1", features = [] }
 
 [dependencies]
-tauri = { version = "1", features = [ "shell-open"] }
+tauri = { version = "1", features = [ "fs-read-file", "dialog-all", "fs-exists", "http-request", "fs-create-dir", "fs-write-file", "fs-read-dir", "shell-open"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-ngrok = "0.13.1"
 tokio = { version = "1.0", features = ["full"] }
 
 [features]
